deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ztb-front-app-deployment
spec:
  selector:
    matchLabels:
      app: ztb-front-app
  replicas: 2
  template:
    metadata:
      labels:
        app: ztb-front-app
    spec:
      containers:
      - name: ztb-front-app
        image: ztb-front-app:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 4200
        volumeMounts:
        - name: data-volume
          mountPath: /data
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: ztb-front-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ztb-front-app-service
spec:
  type: NodePort
  selector:
    app: ztb-front-app
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 4200
    nodePort: 32200
